# intToRoman

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: solution.h
src/: main.cpp  solution.cpp
tests/: intToRoman_test.cpp
